# AI-Meeting-Intelligence-System

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  graph.py  qa_agent.py  state.py
backend/src/agents/nodes/: __init__.py  actions.py  decisions.py  parser.py  summarizer.py
backend/src/api/: __init__.py  routes.py
backend/src/config/: __init__.py  settings.py
backend/src/models/: __init__.py  schemas.py
backend/src/services/: __init__.py  embedding_service.py  llm_service.py  whisper_service.py
backend/src/utils/: __init__.py  helpers.py
backend/src/vectorstore/: __init__.py  chroma_store.py
data/sample_transcripts/: engineering_standup.txt  product_roadmap_meeting.txt
ui/: Dockerfile  README.md  pyproject.toml
ui/src/: __init__.py  app.py
