# AI Meeting Intelligence System - Backend

[project]
name = "meeting-intelligence-backend"
version = "0.1.0"
description = "AI-powered meeting transcript analysis system with LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    
    # Vector Store
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.0",
    
    # Whisper for voice-to-text (local, open-source)
    # Using faster-whisper for better Docker compatibility
    "faster-whisper>=1.0.0",
    
    # Audio processing
    "pydub>=0.25.1",
    
    # API & Data validation
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    
    # Logging & Observability
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
