# AI Meeting Intelligence System - UI

[project]
name = "meeting-intelligence-ui"
version = "0.1.0"
description = "Streamlit UI for AI Meeting Intelligence System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Streamlit
    "streamlit>=1.40.0",
    
    # HTTP client
    "httpx>=0.27.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP"]
